--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ th, td {
     text-align: left;
     padding: 8px;
     border: 1px solid #4c5154;
+    vertical-align: middle;
 }
 
 td.clickable-name {
@@ -110,6 +111,10 @@ select {
     border: none;
     cursor: pointer;
     border-radius: 10px;
+}
+
+img {
+    margin-right: 15px;
 }
 
 #menu-list {
