--- a/style.css
+++ b/style.css
@@ -39,17 +39,15 @@ section {
 section h2 {
     background-color: #070d19;
     color: #c9d2d9;
-    padding: 10px;
-    margin-top: 0;
-    border-radius: 20px;
+    padding: 5px;
+    border-radius: 15px;
 }
 
-section h3 {
+section caption {
     background-color: #070d19;
     color: #c9d2d9;
-    padding: 5px;
-    margin-top: 0;
-    border-radius: 15px;
+    padding: 2px;
+    border-radius: 10px;
 }
 
 a {
@@ -152,7 +150,7 @@ img {
     padding: 10px;
 }
 
-#user-details p, #wallet-info h3, #wallet-info p {
+#user-details p, #wallet-info h2, #wallet-info p, #wallet-info caption {
     margin: 5px 0;
 }
 
@@ -164,6 +162,10 @@ img {
 
 #login-prompt {
     text-align: center;
+}
+
+.content-section {
+    display: none;
 }
 
 /* Styles for tablets (screen width 768px or less) */
