--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@
 
 body {
     font-family: 'Lexend', sans-serif;
-    line-height: 1.6;
     margin: 0;
-    padding: 0;
+    /*padding: 0;*/
     background-color: #0f1a2e;
     color: #c9d2d9;
 }
@@ -15,8 +14,21 @@ body {
 header {
     background-color: #070d19;
     color: #c9d2d9;
-    text-align: center;
-    padding: 1rem 0;
+}
+
+.top-bar {
+    margin-left: 199px;
+    width: calc(100% - 299px);
+}
+
+.top-bar td {
+    background-color: #070d19;
+    border: 1px solid #4c5154;  /*disable this color*/
+}
+
+.topbar-item {
+    width: 25%;
+    /*white-space: nowrap;*/
 }
 
 header h1 {
@@ -25,12 +37,78 @@ header h1 {
 }
 
 main {
-    width: 80%;
+    width: 90%;
     margin: 20px auto;
     padding: 20px;
     background-color: #2d3749;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 25px;
+}
+
+/* When sidebar is opened */
+.main-shift {
+    margin-left: 220px;
+    width: calc((100% - 200px) * 0.9);
+}
+
+/* When menu item is selected */
+.sidebar a.active-menu {
+    color: #008fd5;
+    background-color: #0f1a2e;
+    text-align: center;
+}
+
+button {
+    background-color: #008fd5;
+    color: #c9d2d9;
+    padding: 5px 5px;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+    vertical-align: middle;
+}
+
+button:hover {
+    border-radius: 10px;
+    transition: 0.5s;
+}
+
+button:active {
+    border-radius: 15px;
+    color: #0f1a2e;
+}
+
+#menu-button {
+    width: 28px;
+    position: fixed;
+    top: 14px;
+    left: 15px;
+    z-index: 2;
+}
+
+#login-button {
+    width: 80px;
+    position: fixed;
+    top: 14px;
+    right: 10px;
+    z-index: 2;
+}
+
+#qombo-logo {
+    position: fixed;
+    top: 6px;
+    left: 58px;
+    z-index: 2;
+}
+
+#login-button a {
+    color: #c9d2d9;
+    text-decoration: none;
+}
+
+#login-button:active a {
+    color: #0f1a2e;
+    transition: 0.5s;
 }
 
 section {
@@ -56,7 +134,7 @@ a {
     color: #008fd5;
 }
 
-p, table {
+p {
     margin: 10px 0;
 }
 
@@ -67,7 +145,7 @@ table {
 
 th, td {
     text-align: left;
-    padding: 8px;
+    padding-left: 5px;
     border: 1px solid #4c5154;
     vertical-align: middle;
 }
@@ -106,16 +184,6 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-}
-
-button {
-    background-color: #008fd5;
-    color: #c9d2d9;
-    padding: 10px 10px;
-    border: none;
-    cursor: pointer;
-    border-radius: 15px;
-    vertical-align: middle;
 }
 
 select {
@@ -176,82 +244,27 @@ img {
     width: 0;
     position: fixed;
     z-index: 1;
-    top: 0;
+    top: 53px;
     left: 0;
     background-color: #070d19;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 60px;
 }
 
-.sidebar a, .sidebar button {
+.sidebar a, .sidebar p, .sidebar button {
     padding: 10px 15px;
     text-decoration: none;
-    font-size: 25px;
     color: #c9d2d9;
     display: block;
     transition: 0.3s;
+    white-space: nowrap;
+    border: 2px solid #070d19;
+    border-top: 1px solid #070d19;
+    border-bottom: 1px solid #070d19;
 }
 
-.sidebar a:hover, .sidebar button:hover {
+.sidebar a:hover {
     color: #008fd5;
-    text-decoration: underline;
+    background-color: #2d3749;
+    transition: 1s;
 }
-
-/* Main content style when sidebar is opened */
-.main-shift {
-    margin-left: 250px;
-}
-
-#menu-toggle {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 2;
-}
-
-/* Styles for tablets (screen width 768px or less) */
-/* Styles for mobile phones (screen width 480px or less) */
-/*
-@media screen and (max-width: 768px) {
-    main {
-        width: 95%;
-        padding: 10px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    body {
-        font-size: 14px;
-    }
-
-    main {
-        width: 100%;
-        margin: 10px 0;
-        padding: 5px;
-    }
-}
-*/
-
-/* Pirate Theme */
-/*
-#bb9645-#f2de99 = Gold
-#082db2-#071642 = Blue
-#6d6d6d-#131313 = Gray
-*/
-/*
-Work in progress
-a.pirate {
-    color: #bb9645;
-}
-
-button.pirate {
-    background-color: #bb9645;
-    color: #131313;
-}
-
-select.pirate {
-    background-color: #bb9645;
-    color: #131313;
-}
-*/
