--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ td.clickable-name {
     text-decoration: underline;
 }
 
-span.clickable-name {
+span.clickable-name, span.clickable-rating {
     color: #008fd5;
     cursor: pointer;
     text-decoration: underline;
@@ -257,6 +257,48 @@ img {
 
 #login-prompt {
     text-align: center;
+}
+
+/* Modal styles */
+.modal {
+    display: block; /* Hidden by default */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #0f1a2e;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+}
+
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: red;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.rating-options label {
+    display: block;
+    margin-bottom: 5px;
 }
 
 .content-section {
