--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ th, td {
     vertical-align: middle;
 }
 
-th.clickable-name {
+th.sortable:hover {
     color: #008fd5;
     cursor: pointer;
     text-decoration: underline;
@@ -193,7 +193,13 @@ td.clickable-name {
     text-decoration: underline;
 }
 
-span.clickable-name, span.clickable-rating {
+span.clickable-name {
+    color: #008fd5;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+span.clickable-rating:hover {
     color: #008fd5;
     cursor: pointer;
     text-decoration: underline;
