--- a/style.css
+++ b/style.css
@@ -3,12 +3,36 @@
     src: url('Lexend-Regular.ttf') format('truetype');
 }
 
+a {
+    color: #008fd5;
+}
+
 body {
     font-family: 'Lexend', sans-serif;
     margin: 0;
     /*padding: 0;*/
     background-color: #0f1a2e;
     color: #c9d2d9;
+}
+
+button {
+    background-color: #008fd5;
+    color: #c9d2d9;
+    padding: 5px 5px;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+    vertical-align: middle;
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #070d19;
+    color: #c9d2d9;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 header {
@@ -60,16 +84,6 @@ main {
     color: #008fd5;
     background-color: #0f1a2e;
     text-align: center;
-}
-
-button {
-    background-color: #008fd5;
-    color: #c9d2d9;
-    padding: 5px 5px;
-    border: none;
-    cursor: pointer;
-    border-radius: 15px;
-    vertical-align: middle;
 }
 
 main button {
@@ -161,10 +175,6 @@ section caption {
     border-radius: 10px;
 }
 
-a {
-    color: #008fd5;
-}
-
 p {
     margin: 10px 0;
 }
@@ -213,18 +223,8 @@ tr:nth-child(odd) {
     background-color: #3d4452;
 }
 
-footer {
-    text-align: center;
-    padding: 20px;
-    background-color: #070d19;
-    color: #c9d2d9;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
 select {
-    background-color: #008fd5;
+    background-color: #0f1a2e;
     color: #c9d2d9;
     padding: 5px 5px;
     border: none;
@@ -238,13 +238,44 @@ img {
     vertical-align: middle;
 }
 
-#volume-table td {
-    text-align: right;
-    font-family: monospace
+#login-prompt {
+    text-align: center;
 }
 
 #menu-list {
     text-align: center;
+}
+
+#pagination-controls {
+    text-align: center;
+    margin-top: 10px;
+}
+
+#pagination-controls button {
+    background-color: #008fd5;
+    color: #c9d2d9;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    margin: 0 5px;
+}
+
+#pagination-info {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+/* Style for form labels and inputs */
+#search-form label {
+    display: inline-block;
+    width: 150px;
+    margin-bottom: 5px;
+}
+
+#search-form input, #search-form select {
+    width: 200px;
+    margin-bottom: 5px;
 }
 
 #user-info {
@@ -261,8 +292,9 @@ img {
     margin-top: 10px;
 }
 
-#login-prompt {
-    text-align: center;
+#volume-table td {
+    text-align: right;
+    font-family: monospace
 }
 
 /* Modal styles */
