--- a/old-style.css
+++ b/old-style.css
@@ -3,6 +3,10 @@
     src: url('Lexend-Regular.ttf') format('truetype');
 }
 
+a {
+    color: #008fd5;
+}
+
 body {
     font-family: 'Lexend', sans-serif;
     line-height: 1.6;
@@ -10,6 +14,26 @@ body {
     padding: 0;
     background-color: #0f1a2e;
     color: #c9d2d9;
+}
+
+button {
+    background-color: #008fd5;
+    color: #c9d2d9;
+    padding: 5px 5px;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+    vertical-align: middle;
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #070d19;
+    color: #c9d2d9;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 header {
@@ -50,10 +74,6 @@ section h3 {
     padding: 5px;
     margin-top: 0;
     border-radius: 15px;
-}
-
-a {
-    color: #008fd5;
 }
 
 p, table {
@@ -104,28 +124,8 @@ tr:nth-child(odd) {
     background-color: #3d4452;
 }
 
-footer {
-    text-align: center;
-    padding: 20px;
-    background-color: #070d19;
-    color: #c9d2d9;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-button {
-    background-color: #008fd5;
-    color: #c9d2d9;
-    padding: 10px 10px;
-    border: none;
-    cursor: pointer;
-    border-radius: 15px;
-    vertical-align: middle;
-}
-
 select {
-    background-color: #008fd5;
+    background-color: #0f1a2e;
     color: #c9d2d9;
     padding: 5px 5px;
     border: none;
@@ -139,19 +139,50 @@ img {
     vertical-align: middle;
 }
 
-#volume-table td {
-    text-align: right;
-    font-family: monospace
+#login-prompt {
+    text-align: center;
 }
 
 #menu-list {
     text-align: center;
 }
 
+#pagination-controls {
+    text-align: center;
+    margin-top: 10px;
+}
+
+#pagination-controls button {
+    background-color: #008fd5;
+    color: #c9d2d9;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    margin: 0 5px;
+}
+
+#pagination-info {
+    display: inline-block;
+    margin: 0 10px;
+}
+
 #search-button {
     padding: 5px 10px;
     border-radius: 10px;
     margin-right: 10px;
+}
+
+/* Style for form labels and inputs */
+#search-form label {
+    display: inline-block;
+    width: 150px;
+    margin-bottom: 5px;
+}
+
+#search-form input, #search-form select {
+    width: 200px;
+    margin-bottom: 5px;
 }
 
 #user-info {
@@ -168,8 +199,9 @@ img {
     margin-top: 10px;
 }
 
-#login-prompt {
-    text-align: center;
+#volume-table td {
+    text-align: right;
+    font-family: monospace
 }
 
 /* Modal styles */
