--- a/old-style.css
+++ b/old-style.css
@@ -18,12 +18,17 @@ body {
 
 button {
     background-color: #008fd5;
-    color: #c9d2d9;
+    color: #070d19;
+    font-weight: bold;
     padding: 5px 5px;
     border: none;
     cursor: pointer;
     border-radius: 15px;
     vertical-align: middle;
+}
+
+button:hover {
+    background-color: #006fa1; /* Darker shade on hover */
 }
 
 footer {
@@ -154,7 +159,8 @@ img {
 
 #pagination-controls button {
     background-color: #008fd5;
-    color: #c9d2d9;
+    color: #070d19;
+    font-weight: bold;
     padding: 5px 10px;
     border: none;
     cursor: pointer;
@@ -171,6 +177,8 @@ img {
     padding: 5px 10px;
     border-radius: 10px;
     margin-right: 10px;
+    color: #070d19;
+    font-weight: bold;
 }
 
 /* Style for form labels and inputs */
